Update, added background

--- a/WebContent/testSite.html
+++ b/WebContent/testSite.html
@@ -5,14 +5,16 @@
 <title>Bootstrap Login</title>
 <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
 </head>
-<body>
+<body background="img/testWeb.png">
 	<div class="container">
-		<ul class="nav nav-pills">
-			<li class="active"><a href="#"><h4>Home</h4></a></li>
-			<li><a href="#"><h4>About</h4></a></li>
-			<li><a href="#"><h4>Products</h4></a></li>
-			<li><a href="#"><h4>Contact</h4></a></li>
-		</ul>
+		<form class="well">
+			<ul class="nav nav-pills">
+				<li class="active"><a href="#"><h4>Home</h4></a></li>
+				<li><a href="#"><h4>About</h4></a></li>
+				<li><a href="#"><h4>Products</h4></a></li>
+				<li><a href="#"><h4>Contact</h4></a></li>
+			</ul>
+		</form>
 		<div class="row-fluid">
 			<form class="well span3">
 				<input type="text" class="span12" placeholder="Username" /><br />
