--- a/WebContent/testSite.html
+++ b/WebContent/testSite.html
@@ -5,7 +5,15 @@
 <title>Bootstrap Login</title>
 <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
 </head>
-<body background="img/testWeb.png">
+<style type="text/css">
+.contentBox {
+	overflow: scroll;
+	background: url("img/testWeb.png");
+	background-repeat: repeat-x;
+	background-attachment: fixed;
+}
+</style>
+<body class="contentBox">
 	<div class="container">
 		<form class="well">
 			<ul class="nav nav-pills">
@@ -59,29 +67,29 @@
 				<table class="table table-hover">
 					<thead>
 						<tr>
-							<th> </th>
+							<th></th>
 							<th>Contacts</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
-							<td><img alt="" src="img/test.jpg"> </td>
+							<td><img alt="" src="img/test.jpg"></td>
 							<td>David Barka</td>
 						</tr>
 						<tr>
-							<td> </td>
+							<td></td>
 							<td>Ola Nordmann</td>
 						</tr>
 						<tr>
-							<td> </td>
+							<td></td>
 							<td>Ola Nordmann</td>
 						</tr>
 						<tr>
-							<td> </td>
+							<td></td>
 							<td>Ola Nordmann</td>
 						</tr>
 						<tr>
-							<td> </td>
+							<td></td>
 							<td>Ola Nordmann</td>
 						</tr>
 					</tbody>
