--- a/WebContent/logIn.html
+++ b/WebContent/logIn.html
@@ -8,22 +8,23 @@
 <style type="text/css">
 .contentBox {
 	overflow: scroll;
-	background: url("img/testWeb.png");
+	background: url("img/testWeb2.png");
 	background-repeat: repeat-x;
 	background-attachment: fixed;
 }
 
 .p {
-	padding: 100px;
+	padding: 110px;
 }
 </style>
 <body class="contentBox">
-	<div class="navbar navbar-fixed-top">
+<!-- top menu -->
+	<div class="navbar navbar-fixed-top navbar-inverse">
 		<div class="navbar">
 			<div class="navbar-inner">
 				<a class="brand" href="#">MentorFind</a>
 				<div class="btn-group pull-right">
-					<a class="btn dropdown-toggle btn-info" data-toggle="dropdown"
+					<a class="btn dropdown-toggle btn-inverse btn-small" data-toggle="dropdown"
 						href="#"> Language <span class="caret"></span>
 					</a>
 					<ul class="dropdown-menu">
@@ -36,7 +37,6 @@
 	</div>
 	<div class="p"></div>
 	<div class="container">
-
 		<div class="container-fluid">
 			<div class="row-fluid">
 				<!-- left side -->
@@ -45,7 +45,7 @@
 					<p>Find mentors and trainees with the right qualifications, all
 						in one place.</p>
 					<p>
-						<a class="btn btn-primary btn-large">Learn more</a>
+						<a class="btn btn-info btn-large">Learn more</a>
 					</p>
 				</div>
 				<!-- right side -->
