added message button on contact list

--- a/WebContent/logIn.html
+++ b/WebContent/logIn.html
@@ -45,17 +45,18 @@
 					<p>Find mentors and trainees with the right qualifications, all
 						in one place.</p>
 					<p>
-						<a class="btn btn-info btn-large">Learn more</a>
+						<a class="btn btn-info btn-large" href="http://www.youtube.com/watch?v=nJ6r1XufCQU&feature=g-upl">Learn more</a>
 					</p>
 				</div>
 				<!-- right side -->
-				<div class="span3">
+				<div class="span4">
 					<div>
 						<form class="well">
 							<input type="text" class="span12" placeholder="Username or email" /><br />
-							<input type="password" class="span12" placeholder="Password" />
-							<br /> <a href="testSite.html"><button
-									class="btn btn-primary btn-block">Sign in</button></a> <br />
+							<div class="form-inline">
+								<input type="password" class="span8" placeholder="Password" />
+								<a href="testSite.html" class="btn btn-primary">Sign in</a>
+							</div> <br />
 							<h4>
 								New to MentorFind? <small>Sign up</small>
 							</h4>
@@ -63,8 +64,7 @@
 							<input type="text" class="span12" placeholder="Email" /><br />
 							<input type="password" class="span12" placeholder="Password" />
 							<br />
-							<button class="btn btn-warning btn-block">Sign up for
-								MentorFind</button>
+							<a class="btn btn-warning pull-right" href="#sign"><strong>Sign up for MentorFind</strong></a><br/>
 						</form>
 					</div>
 				</div>
