--- a/WebContent/testSite.html
+++ b/WebContent/testSite.html
@@ -28,10 +28,16 @@
 			<div class="navbar-inner">
 				<a class="brand" href="#">MentorFind</a>
 				<ul class="nav">
-					<li class="active"><a href="#">Home</a></li>
-					<li><a href="#">Profile</a></li>
-					<li><a href="#">Inbox</a></li>
-					<li><a href="#">Contacts</a></li>
+					<li><a class="dropdown-toggle" data-toggle="dropdown" href="#"><i
+							class="icon-user"></i> Profile</a>
+						<ul class="dropdown-menu" role="menu" aria-labelledby="dlabel">
+							<!-- dropdown menu links -->
+							<li><a href="#"><i class="icon-home"></i> Home</a></li>
+							<li><a href="logIn.html"><i class="icon-off"></i> Log out</a></li>
+						</ul></li>
+					<li><a href="#"><i class="icon-comment"></i> Inbox</a></li>
+					<li><a href="#"><i class="icon-th-list"></i> Contacts</a></li>
+					
 				</ul>
 				<form class="navbar-search pull-right">
 					<input type="text" class="search-query" placeholder="Search">
@@ -129,28 +135,32 @@
 							<tr>
 								<td><img alt="" src="img/test.jpg"
 									class="img-rounded span2"></td>
-								<td>David Barka <br /> <a href="#dropDownMsg"  data-toggle="modal" class="btn btn-warning"
-									>Message</a></td>
+								<td>David Barka <br /> <a href="#dropDownMsg"
+									data-toggle="modal" class="btn btn-warning">Message</a></td>
 							</tr>
 							<tr>
 								<td><img alt="" src="img/user.png"
 									class="img-rounded span2"></td>
-								<td>Ola Nordmann<br /> <a href="#dropDownMsg"  data-toggle="modal" class="btn btn-warning">Message</a></td>
+								<td>Ola Nordmann<br /> <a href="#dropDownMsg"
+									data-toggle="modal" class="btn btn-warning">Message</a></td>
 							</tr>
 							<tr>
 								<td><img alt="" src="img/user.png"
 									class="img-rounded span2"></td>
-								<td>Ola Nordmann<br /> <a href="#dropDownMsg"  data-toggle="modal" class="btn btn-warning">Message</a></td>
+								<td>Ola Nordmann<br /> <a href="#dropDownMsg"
+									data-toggle="modal" class="btn btn-warning">Message</a></td>
 							</tr>
 							<tr>
 								<td><img alt="" src="img/user.png"
 									class="img-rounded span2"></td>
-								<td>Ola Nordmann<br /> <a href="#dropDownMsg"  data-toggle="modal" class="btn btn-warning">Message</a></td>
+								<td>Ola Nordmann<br /> <a href="#dropDownMsg"
+									data-toggle="modal" class="btn btn-warning">Message</a></td>
 							</tr>
 							<tr>
 								<td><img alt="" src="img/user.png"
 									class="img-rounded span2"></td>
-								<td>Ola Nordmann<br /> <a href="#dropDownMsg"  data-toggle="modal" class="btn btn-warning">Message</a></td>
+								<td>Ola Nordmann<br /> <a href="#dropDownMsg"
+									data-toggle="modal" class="btn btn-warning">Message</a></td>
 							</tr>
 						</tbody>
 					</table>
@@ -162,6 +172,9 @@
 	<script src="http://code.jquery.com/jquery-latest.js"></script>
 	<script src="js/bootstrap.js"></script>
 </body>
+<script>
+	$('.dropdown-toggle').dropdown()
+</script>
 <!-- Modal -->
 <div id="dropDownMsg" class="modal hide fade in" style="display: none;">
 	<div class="modal-header">
@@ -169,16 +182,17 @@
 		<h3>New message</h3>
 	</div>
 	<div class="modal-body">
-	<table>
-	<tr>
-		<td><textarea rows="6"  class="textarea span4" placeholder="Write your message here..." ></textarea></td>
-		<td><img alt="" src="img/user.png" class="img-rounded offset1"></td>
-									</tr>
+		<table>
+			<tr>
+				<td><textarea rows="6" class="textarea span4"
+						placeholder="Write your message here..."></textarea></td>
+				<td><img alt="" src="img/user.png" class="img-rounded offset1"></td>
+			</tr>
 		</table>
 	</div>
 	<div class="modal-footer">
-		<a href="#" class="btn btn-success"><strong>Send</strong></a> 
-		<a href="#" class="btn" data-dismiss="modal">Cancel</a>
+		<a href="#" class="btn btn-success"><strong>Send</strong></a> <a
+			href="#" class="btn" data-dismiss="modal">Cancel</a>
 	</div>
 </div>
 </html>
