--- a/WebContent/logIn.html
+++ b/WebContent/logIn.html
@@ -22,9 +22,9 @@
 	<div class="navbar navbar-fixed-top navbar-inverse">
 		<div class="navbar">
 			<div class="navbar-inner">
-				<a class="brand" href="#">MentorFind</a>
+				<a class="brand" href="#"><img alt="" src="img/logo_mini.png" class="offset1"></a>
 				<div class="btn-group pull-right">
-					<a class="btn dropdown-toggle btn-inverse btn-small" data-toggle="dropdown"
+					<a class="btn dropdown-toggle btn-inverse btn-large" data-toggle="dropdown"
 						href="#"> Language <span class="caret"></span>
 					</a>
 					<ul class="dropdown-menu">
