--- a/WebContent/testSite.html
+++ b/WebContent/testSite.html
@@ -29,13 +29,13 @@
 				<a class="brand" href="#">MentorFind</a>
 				<ul class="nav">
 					<li><a class="dropdown-toggle" data-toggle="dropdown" href="#"><i
-							class="icon-user"></i> Profile</a>
+							class="icon-user"></i> Profile <i class="icon-chevron-down"></i></a>
 						<ul class="dropdown-menu" role="menu" aria-labelledby="dlabel">
 							<!-- dropdown menu links -->
 							<li><a href="#"><i class="icon-home"></i> Home</a></li>
 							<li><a href="logIn.html"><i class="icon-off"></i> Log out</a></li>
 						</ul></li>
-					<li><a href="#"><i class="icon-comment"></i> Inbox</a></li>
+					<li><a href="#"><i class="icon-envelope"></i> Inbox</a></li>
 					<li><a href="#"><i class="icon-th-list"></i> Contacts</a></li>
 					
 				</ul>
