added inbox and contacts page updated bg.

--- a/WebContent/logIn.html
+++ b/WebContent/logIn.html
@@ -8,7 +8,7 @@
 <style type="text/css">
 .contentBox {
 	overflow: scroll;
-	background: url("img/testWeb2.png");
+	background: url("img/bg.png");
 	background-repeat: repeat-x;
 	background-attachment: fixed;
 }
@@ -80,7 +80,7 @@
 	<!-- Popover -->
 	<script>  
 $(function ()  
-{ $("#example").popover({placement:'bottom'});  
+{ $("#example").popover({placement:'top'});  
 });  
 </script>  
 </body>
