addaed icon in url, added preferences link in profile dropdown menu

--- a/WebContent/testSite.html
+++ b/WebContent/testSite.html
@@ -5,6 +5,7 @@
 <title>MentorFind Home</title>
 <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
 </head>
+<link rel="shortcut icon"  href="img/favicon.ico" ></link>
 <style type="text/css">
 .contentBox {
 	overflow: scroll;
@@ -33,6 +34,7 @@
 						<ul class="dropdown-menu" role="menu" aria-labelledby="dlabel">
 							<!-- dropdown menu links -->
 							<li><a href="#"><i class="icon-home"></i> Home</a></li>
+							<li><a href="#"><i class="icon-wrench"></i> Preferences</a></li>
 							<li><hr></li>
 							<li><a href="logIn.html"><i class="icon-off"></i> Log out</a></li>
 						</ul></li>
