--- a/WebContent/logIn.html
+++ b/WebContent/logIn.html
@@ -4,6 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>MentorFind</title>
+<link rel="shortcut icon"  href="img/favicon.ico" ></link>
 </head>
 <style type="text/css">
 .contentBox {
@@ -13,8 +14,8 @@
 	background-attachment: fixed;
 }
 
-.p {
-	padding: 110px;
+.padding {
+	padding: 90px;
 }
 </style>
 <body class="contentBox">
@@ -22,8 +23,8 @@
 	<div class="navbar navbar-fixed-top navbar-inverse">
 		<div class="navbar">
 			<div class="navbar-inner">
-				<a class="brand" href="#"><img alt="" src="img/logo_mini.png" class="offset1"></a>
-				<div class="btn-group pull-right form-inline">
+				<a class="brand" href="#"><img alt="" src="img/logo_mini.png" ></a>
+				<div class="btn-group pull-right">
 					<a class="btn dropdown-toggle btn-inverse btn-large" data-toggle="dropdown"
 						href="#"><small> Language </small><span class="caret"></span>
 					</a>
@@ -36,18 +37,19 @@
 			</div>
 		</div>
 	</div>
-	<div class="p"></div>
+	<div class="padding"></div>
 	<div class="container">
 		<div class="container-fluid">
 			<div class="row-fluid">
 				<!-- left side -->
 				<div class="hero-unit span8">
 					<h1>MentorFind</h1>
-					<p>Find mentors and trainees with the right qualifications, share knowledge, all
+					<p>Find mentors and trainees with the right qualifications and share knowledge, all
 						in one place.</p>
 					<p>
 						<a class="btn btn-info btn-large" href="#dropDownMsg" data-toggle="modal">Learn more</a>
-						<!-- <a href="#" id="example" class="btn btn-info btn-large" rel="popover"  data-content=""data-original-title="Twitter Bootstrap Popover">Info</a> -->
+						<!-- <a href="#" id="example" class="btn btn-info btn-large" rel="popover"  
+						data-content=""data-original-title="Twitter Bootstrap Popover">Info</a> -->
 					</p>
 				</div>
 				<!-- right side -->
@@ -74,6 +76,11 @@
 				</div>
 			</div>
 		</div>
+		<div class="padding"></div>
+		<div class="form-inline pagination-centered">
+			<a href="mailto:davidbarka@outlook.com" >Feedback</a>
+			<label><small>MentorFind 2012</small></label>
+		</div>
 	</div>
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
 	<script src="js/bootstrap.js"></script>
@@ -88,7 +95,8 @@ $(function ()
 <div id="dropDownMsg" class="modal hide fade in" style="display: none;">
 	<div class="modal-header">
 		<a class="close" data-dismiss="modal">X</a>
-		<h3>Info</h3>
+		<h3><img alt="" src="img/logo_black.png"
+									>Info</h3>
 	</div>
 	<div class="modal-body">
 		<iframe width="525" height="315" src="http://www.youtube.com/embed/nJ6r1XufCQU" frameborder="0" allowfullscreen></iframe>
