--- a/WebContent/Contacts.html
+++ b/WebContent/Contacts.html
@@ -9,9 +9,12 @@
 <style type="text/css">
 .contentBox {
 	overflow: scroll;
-	background: url("img/bg.png");
+	background: url("img/bg_dark.png");
 	background-repeat: repeat-x;
 	background-attachment: fixed;
+}
+.shadow {
+  box-shadow: 5px 5px 8px -1px #222;
 }
 </style>
 
@@ -20,7 +23,7 @@
 		<!-- top menu -->
 		<br />
 		<div class="navbar">
-			<div class="navbar-inner">
+			<div class="navbar-inner shadow">
 				<a class="brand" href="testSite.html">MentorFind</a>
 				<ul class="nav">
 					<li><a class="dropdown-toggle" data-toggle="dropdown" href="#"><i
@@ -43,7 +46,7 @@
 			<br />
 			<div class="row-fluid">
 
-				<form class="well span12">
+				<form class="well span12  shadow">
 					<table class="table table-hover">
 						<thead>
 							<tr>
