--- a/WebContent/logIn.html
+++ b/WebContent/logIn.html
@@ -6,6 +6,7 @@
 <title>MentorFind</title>
 <link rel="shortcut icon"  href="img/favicon.ico" ></link>
 </head>
+<!-- login_bg taken from interfacelift.com by thekidder. url: http://interfacelift.com/wallpaper/details/3062/stormy_ocean.html -->
 <style type="text/css">
 .contentBox {
 	overflow: scroll;
@@ -19,7 +20,10 @@
 		background-repeat:no-repeat;
 	background-size:cover;
 	-moz-background-size: cover;
+}
 
+.shadow {
+  box-shadow: 5px 5px 8px -1px #222;
 }
 .padding {
 	padding: 90px;
@@ -50,7 +54,7 @@
 		<div class="container-fluid">
 			<div class="row-fluid">
 				<!-- left side -->
-				<div class="hero-unit span8">
+				<div class="hero-unit span8 shadow">
 					<h1>MentorFind</h1>
 					<p>Find mentors and trainees with the right qualifications and share knowledge, all
 						in one place.</p>
@@ -63,7 +67,7 @@
 				<!-- right side -->
 				<div class="span4">
 					<div>
-						<form class="well">
+						<form class="well shadow">
 							<input type="text" class="span12" placeholder="Username or email" /><br />
 							<div class="form-inline">
 								<input type="password" class="span8" placeholder="Password" />
@@ -84,13 +88,12 @@
 				</div>
 			</div>
 		</div>
-		<div class="padding"></div>
-		<form class="well well-small">
-		<div class="form-inline pagination-centered">
-			<a href="mailto:davidbarka@outlook.com" >Feedback</a>
-			<label><small>MentorFind 2012</small></label>
+		<!-- <div class="padding"></div> -->
+		<div class="form-inline" style="position:absolute; bottom:3%; left:10%;">
+			<a href="mailto:mentorfind@outlook.com" style="color: white;">Feedback</a> 
+			<a href="http://interfacelift.com/wallpaper/details/3062/stormy_ocean.html" style="color:white;">Wallpaper</a>
+			<label style="color: #dcdcdc;"><small>© 2012 MentorFind</small></label>
 		</div>
-		</form>
 	</div>
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
 	<script src="js/bootstrap.js"></script>
@@ -109,7 +112,7 @@ $(function ()
 									>Info</h3>
 	</div>
 	<div class="modal-body">
-		<iframe width="525" height="315" src="http://www.youtube.com/embed/nJ6r1XufCQU" frameborder="0" allowfullscreen></iframe>
+		<iframe width="525" height="315" src="http://www.youtube.com/embed/nJ6r1XufCQU" ></iframe>
 	</div>
 </div>
 </html>
