--- a/WebContent/testSite.html
+++ b/WebContent/testSite.html
@@ -9,16 +9,13 @@
 <style type="text/css">
 .contentBox {
 	overflow: scroll;
-	background: url("img/bg.png");
+	background: url("img/bg_dark.png");
 	background-repeat: repeat-x;
 	background-attachment: fixed;
 }
 
-.paperBack {
-	overflow: scroll;
-	background: url("img/paperBack.png");
-	background-repeat: repeat-y;
-	background-attachment: fixed;
+.shadow {
+  box-shadow: 5px 5px 8px -1px #222;
 }
 </style>
 <body class="contentBox">
@@ -26,7 +23,7 @@
 		<!-- top menu -->
 		<br />
 		<div class="navbar">
-			<div class="navbar-inner">
+			<div class="navbar-inner shadow">
 				<a class="brand" href="#">MentorFind</a>
 				<ul class="nav">
 					<li><a class="dropdown-toggle" data-toggle="dropdown" href="#"><i
@@ -50,49 +47,7 @@
 			<div class="row-fluid">
 				<!--left column -->
 				
-				<form class="well span4">
-					<table class="table table-hover">
-						<thead>
-							<tr>
-								<th></th>
-								<th><strong>Contacts</strong></th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td><img alt="" src="img/test.jpg"
-									class="img-rounded span2"></td>
-								<td>David Barka <br /> <a href="#dropDownMsg"
-									data-toggle="modal" class="btn btn-warning">Message</a></td>
-							</tr>
-							<tr>
-								<td><img alt="" src="img/user.png"
-									class="img-rounded span2"></td>
-								<td>Ola Nordmann<br /> <a href="#dropDownMsg"
-									data-toggle="modal" class="btn btn-warning">Message</a></td>
-							</tr>
-							<tr>
-								<td><img alt="" src="img/user.png"
-									class="img-rounded span2"></td>
-								<td>Ola Nordmann<br /> <a href="#dropDownMsg"
-									data-toggle="modal" class="btn btn-warning">Message</a></td>
-							</tr>
-							<tr>
-								<td><img alt="" src="img/user.png"
-									class="img-rounded span2"></td>
-								<td>Ola Nordmann<br /> <a href="#dropDownMsg"
-									data-toggle="modal" class="btn btn-warning">Message</a></td>
-							</tr>
-							<tr>
-								<td><img alt="" src="img/user.png"
-									class="img-rounded span2"></td>
-								<td>Ola Nordmann<br /> <a href="#dropDownMsg"
-									data-toggle="modal" class="btn btn-warning">Message</a></td>
-							</tr>
-						</tbody>
-					</table>
-				</form>
-				<form class="well span8">
+				<form class="well span8 shadow">
 					<table class="table table-hover">
 						<thead>
 							<tr>
@@ -168,8 +123,54 @@
 				</form>
 
 				<!--right column -->
+					
+				<form class="well span4 shadow">
+					<table class="table table-hover">
+						<thead>
+							<tr>
+								<th></th>
+								<th><strong>Contacts</strong></th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td><img alt="" src="img/test.jpg"
+									class="img-rounded span2"></td>
+								<td>David Barka <br /> <a href="#dropDownMsg"
+									data-toggle="modal" class="btn btn-warning">Message</a></td>
+							</tr>
+							<tr>
+								<td><img alt="" src="img/user.png"
+									class="img-rounded span2"></td>
+								<td>Ola Nordmann<br /> <a href="#dropDownMsg"
+									data-toggle="modal" class="btn btn-warning">Message</a></td>
+							</tr>
+							<tr>
+								<td><img alt="" src="img/user.png"
+									class="img-rounded span2"></td>
+								<td>Ola Nordmann<br /> <a href="#dropDownMsg"
+									data-toggle="modal" class="btn btn-warning">Message</a></td>
+							</tr>
+							<tr>
+								<td><img alt="" src="img/user.png"
+									class="img-rounded span2"></td>
+								<td>Ola Nordmann<br /> <a href="#dropDownMsg"
+									data-toggle="modal" class="btn btn-warning">Message</a></td>
+							</tr>
+							<tr>
+								<td><img alt="" src="img/user.png"
+									class="img-rounded span2"></td>
+								<td>Ola Nordmann<br /> <a href="#dropDownMsg"
+									data-toggle="modal" class="btn btn-warning">Message</a></td>
+							</tr>
+						</tbody>
+					</table>
+				</form>
 			</div>
 		</div>
+		<div class="form-inline" >
+	<a href="http://glyphicons.com" style="color: lightgray;"><small>Icons by Glyphicons</small></a>
+</div>
 	</div>
 	<script src="http://code.jquery.com/jquery-latest.js"></script>
 	<script src="js/bootstrap.js"></script>
