updated home page, "timeline". updated login screen. adn added cv in menubar

--- a/WebContent/Contacts.html
+++ b/WebContent/Contacts.html
@@ -37,7 +37,7 @@
 						</ul></li>
 					<li><a href="inbox.html"><i class="icon-envelope"></i> Inbox</a></li>
 					<li><a href="#"><i class="icon-th-list"></i> Contacts</a></li>
-					
+					<li><a href="#"><i class="icon-briefcase"></i> CV</a></li>
 				</ul>
 				<form class="navbar-search pull-right">
 					<input type="text" class="search-query" placeholder="Search">
@@ -77,9 +77,9 @@
 							<tr>
 							<td><img alt="" src="img/user.png"
 									class="img-rounded span6"></td>
-								<td>Geir <br /> <a href="#dropDownMsg"
+								<td>Geir Lippestad<br /> <a href="#dropDownMsg"
 									data-toggle="modal" class="btn btn-warning">Message</a></td>
-								<td>31.12.2012</td>
+								<td>42</td>
 								<td>Oslo, Norway</td>
 								<td>Manager</td>
 								<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
@@ -92,9 +92,9 @@
 							<tr>
 							<td><img alt="" src="img/user.png"
 									class="img-rounded span6"></td>
-								<td>Tom <br /> <a href="#dropDownMsg"
+								<td>Tom Jones<br /> <a href="#dropDownMsg"
 									data-toggle="modal" class="btn btn-warning">Message</a></td>
-								<td>31.12.2012</td>
+								<td>68</td>
 								<td>New York, US</td>
 								<td>Shop keeper</td>
 								<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
@@ -107,9 +107,9 @@
 							<tr>
 							<td><img alt="" src="img/user.png"
 									class="img-rounded span6"></td>
-								<td>Kari <br /> <a href="#dropDownMsg"
+								<td>Kari Bremnes<br /> <a href="#dropDownMsg"
 									data-toggle="modal" class="btn btn-warning">Message</a></td>
-								<td>31.12.2012</td>
+								<td>24</td>
 								<td>Sandnes, Norway</td>
 								<td>unemployed</td>
 								<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
@@ -122,10 +122,10 @@
 							<tr>
 							<td><img alt="" src="img/user.png"
 									class="img-rounded span6"></td>
-								<td>David Barka <br /> <a href="#dropDownMsg"
+								<td>David Gray <br /> <a href="#dropDownMsg"
 									data-toggle="modal" class="btn btn-warning">Message</a></td>
-								<td>31.12.2012</td>
-								<td>Stavanger, Norway</td>
+								<td>47</td>
+								<td>London, England</td>
 								<td>Developer</td>
 								<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 								incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
@@ -137,9 +137,9 @@
 							<tr>
 							<td><img alt="" src="img/user.png"
 									class="img-rounded span6"></td>
-								<td>Geir <br /> <a href="#dropDownMsg"
+								<td>Tore Sagen<br /> <a href="#dropDownMsg"
 									data-toggle="modal" class="btn btn-warning">Message</a></td>
-								<td>31.12.2012</td>
+								<td>31</td>
 								<td>Oslo, Norway</td>
 								<td>Manager</td>
 								<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
@@ -152,9 +152,9 @@
 							<tr>
 							<td><img alt="" src="img/user.png"
 									class="img-rounded span6"></td>
-								<td>Tom <br /> <a href="#dropDownMsg"
+								<td>Jack Daniels<br /> <a href="#dropDownMsg"
 									data-toggle="modal" class="btn btn-warning">Message</a></td>
-								<td>31.12.2012</td>
+								<td>55</td>
 								<td>New York, US</td>
 								<td>Shop keeper</td>
 								<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
@@ -167,9 +167,9 @@
 							<tr>
 							<td><img alt="" src="img/user.png"
 									class="img-rounded span6"></td>
-								<td>Kari <br /> <a href="#dropDownMsg"
+								<td>Hanne Kråg <br /> <a href="#dropDownMsg"
 									data-toggle="modal" class="btn btn-warning">Message</a></td>
-								<td>31.12.2012</td>
+								<td>32</td>
 								<td>Sandnes, Norway</td>
 								<td>unemployed</td>
 								<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
