--- a/WebContent/testSite.html
+++ b/WebContent/testSite.html
@@ -37,7 +37,7 @@
 						</ul></li>
 					<li><a href="inbox.html"><i class="icon-envelope"></i> Inbox</a></li>
 					<li><a href="Contacts.html"><i class="icon-th-list"></i> Contacts</a></li>
-					
+					<li><a href="#"><i class="icon-briefcase"></i> CV</a></li>
 				</ul>
 				<form class="navbar-search pull-right">
 					<input type="text" class="search-query" placeholder="Search">
@@ -51,72 +51,39 @@
 					<table class="table table-hover">
 						<thead>
 							<tr>
-								<th>Name</th>
-								<th>Age</th>
-								<th>Location</th>
-								<th>Profession</th>
+								<th></th>
+								<th></th>
 							</tr>
 						</thead>
 						<tbody>
 							<tr>
-								<td>David Barka</td>
-								<td>26</td>
-								<td>Stavanger, Norway</td>
-								<td>Developer</td>
+								<td><img alt="" src="img/user.png"
+									class="img-rounded"><br/>Geir Lippestad</td>
+								<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
+								incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+								Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+								Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
+								deserunt mollit anim id est laborum.</td>
+								</tr>
+								<tr>
+								<td><img alt="" src="img/test.jpg"
+									class="img-rounded"><br/>David Barka</td>
+								<td>Do you know how to access the asm in c#?</td>
 							</tr>
 							<tr>
-								<td>Geir</td>
-								<td>47</td>
-								<td>Oslo, Norway</td>
-								<td>Manager</td>
+								<td><img alt="" src="img/user.png"
+									class="img-rounded"><br/>Kari Bremnes</td>
+								<td>Har du sett dette fine bilde? <br/><img alt="" src="img/login_bg.jpg"
+									class="img-rounded"></td>
 							</tr>
 							<tr>
-								<td>Tom</td>
-								<td>31</td>
-								<td>New York, US</td>
-								<td>Shop keeper</td>
-							</tr>
-							<tr>
-								<td>Kari</td>
-								<td>22</td>
-								<td>Sandnes, Norway</td>
-								<td>unemployed</td>
-							</tr>
-						</tbody>
-					</table>
-					<table class="table table-hover">
-						<thead>
-							<tr>
-								<th>Name</th>
-								<th>Age</th>
-								<th>Location</th>
-								<th>Profession</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>David Barka</td>
-								<td>26</td>
-								<td>Stavanger, Norway</td>
-								<td>Developer</td>
-							</tr>
-							<tr>
-								<td>Geir</td>
-								<td>47</td>
-								<td>Oslo, Norway</td>
-								<td>Manager</td>
-							</tr>
-							<tr>
-								<td>Tom</td>
-								<td>31</td>
-								<td>New York, US</td>
-								<td>Shop keeper</td>
-							</tr>
-							<tr>
-								<td>Kari</td>
-								<td>22</td>
-								<td>Sandnes, Norway</td>
-								<td>unemployed</td>
+							<td><img alt="" src="img/user.png"
+									class="img-rounded"><br/>Tore Sagen</td>
+								<td>
+									Bra video!<br/>
+									<iframe width=100% height="300" src="http://www.youtube.com/embed/sXasCjUTNpE" frameborder="0" allowfullscreen></iframe>
+								</td>
 							</tr>
 						</tbody>
 					</table>
@@ -169,7 +136,7 @@
 			</div>
 		</div>
 		<div class="form-inline" >
-	<a href="http://glyphicons.com" style="color: lightgray;"><small>Icons by Glyphicons</small></a>
+	<a href="http://glyphicons.com" style="color: gray; "><small>Icons by Glyphicons</small></a>
 </div>
 	</div>
 	<script src="http://code.jquery.com/jquery-latest.js"></script>
