--- a/WebContent/inbox.html
+++ b/WebContent/inbox.html
@@ -36,7 +36,7 @@
 						</ul></li>
 					<li><a href="inbox.html"><i class="icon-envelope"></i> Inbox</a></li>
 					<li><a href="Contacts.html"><i class="icon-th-list"></i> Contacts</a></li>
-					
+					<li><a href="#"><i class="icon-briefcase"></i> CV</a></li>
 				</ul>
 				<form class="navbar-search pull-right">
 					<input type="text" class="search-query" placeholder="Search">
