--- a/WebContent/logIn.html
+++ b/WebContent/logIn.html
@@ -119,8 +119,7 @@ $(function ()
 <div id="dropDownMsg" class="modal hide fade in" style="display: none;">
 	<div class="modal-header">
 		<a class="close" data-dismiss="modal">X</a>
-		<h3><img alt="" src="img/logo_black.png"
-									>Info</h3>
+		<h3><img alt="" src="img/logo_black.png">Info</h3>
 	</div>
 	<div class="modal-body">
 		<iframe width="525" height="315" src="http://www.youtube.com/embed/nJ6r1XufCQU" ></iframe>
