--- a/WebContent/Contacts.html
+++ b/WebContent/Contacts.html
@@ -13,6 +13,10 @@
 	background-repeat: repeat-x;
 	background-attachment: fixed;
 }
+.padding {
+	padding: 20px;
+}
+
 .shadow {
   box-shadow: 5px 5px 8px -1px #222;
 }
@@ -22,7 +26,7 @@
 <div class="container">
 		<!-- top menu -->
 		<br />
-		<div class="navbar">
+		<div class="navbar navbar-fixed-top">
 			<div class="navbar-inner shadow">
 				<a class="brand" href="testSite.html">MentorFind</a>
 				<ul class="nav">
@@ -36,14 +40,15 @@
 							<li><a href="logIn.html"><i class="icon-off"></i> Log out</a></li>
 						</ul></li>
 					<li><a href="inbox.html"><i class="icon-envelope"></i> Inbox</a></li>
-					<li><a href="#"><i class="icon-th-list"></i> Contacts</a></li>
+					<li class="active"><a href="#"><i class="icon-th-list"></i> Contacts</a></li>
 					<li><a href="#"><i class="icon-briefcase"></i> CV</a></li>
 				</ul>
 				<form class="navbar-search pull-right">
 					<input type="text" class="search-query" placeholder="Search">
 				</form>
 			</div>
-			<br />
+			</div>
+			<div class="padding"></div>
 			<div class="row-fluid">
 
 				<form class="well span12  shadow">
@@ -181,12 +186,10 @@
 							</tr>
 						</tbody>
 					</table>
-				</form>
-
-				
+				</form>				
 			</div>
 		</div>
-	</div>
+
 	<script src="http://code.jquery.com/jquery-latest.js"></script>
 	<script src="js/bootstrap.js"></script>
 </body>
