--- a/WebContent/testSite.html
+++ b/WebContent/testSite.html
@@ -13,6 +13,9 @@
 	background-repeat: repeat-x;
 	background-attachment: fixed;
 }
+.padding {
+	padding: 20px;
+}
 
 .shadow {
   box-shadow: 5px 5px 8px -1px #222;
@@ -22,7 +25,8 @@
 	<div class="container">
 		<!-- top menu -->
 		<br />
-		<div class="navbar">
+
+		<div class="navbar navbar-fixed-top">
 			<div class="navbar-inner shadow">
 				<a class="brand" href="#">MentorFind</a>
 				<ul class="nav">
@@ -30,7 +34,7 @@
 							class="icon-user"></i> Profile <i class="icon-chevron-down"></i></a>
 						<ul class="dropdown-menu" role="menu" aria-labelledby="dlabel">
 							<!-- dropdown menu links -->
-							<li><a href="#"><i class="icon-home"></i> Home</a></li>
+							<li class="active"><a href="#"><i class="icon-home"></i> Home</a></li>
 							<li><a href="#"><i class="icon-wrench"></i> Preferences</a></li>
 							<li><hr></li>
 							<li><a href="logIn.html"><i class="icon-off"></i> Log out</a></li>
@@ -43,7 +47,8 @@
 					<input type="text" class="search-query" placeholder="Search">
 				</form>
 			</div>
-			<br />
+			</div>
+			<div class="padding"></div>
 			<div class="row-fluid">
 				<!--left column -->
 				
@@ -134,7 +139,7 @@
 					</table>
 				</form>
 			</div>
-		</div>
+		
 		<div class="form-inline" >
 	<a href="http://glyphicons.com" style="color: gray; "><small>Icons by Glyphicons</small></a>
 </div>
