--- a/WebContent/testSite.html
+++ b/WebContent/testSite.html
@@ -28,7 +28,7 @@
 
 		<div class="navbar navbar-fixed-top">
 			<div class="navbar-inner shadow">
-				<a class="brand" href="#">MentorFind</a>
+				<a class="brand" href="#"> <i class="icon-home"></i>MentorFind</a>
 				<ul class="nav">
 					<li><a class="dropdown-toggle" data-toggle="dropdown" href="#"><i
 							class="icon-user"></i> Profile <i class="icon-chevron-down"></i></a>
